--- a/tor_detection.ipynb
+++ b/tor_detection.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#This repo is to share the code shared during the TechGig webinar. \n",
-    "#We have used (Balamurali and Satnam) a dataset taken from Canadian Institute of CyberSecurity. \n",
+    "#We have used a dataset taken from Canadian Institute of CyberSecurity. \n",
     "#We cannot share the data here; please contact a.habibi.l@unb.ca to obtain the dataset.\n",
     "import pandas as pd\n",
     "import numpy as np"
